# magicscroll

./: .env.example  INGESTION_SUCCESS.md  OXIGRAPH_INTEGRATION.md  README.md  debug_cli.py  explore_conversations.sh  explore_data.py  explore_projects.sh  ingest_full_export.py  pyproject.toml  reset_and_test.py.bak  test_claude_ingest.py  test_claude_ingest_with_storage.py  test_clean_architecture.py  test_cli_direct.py  test_complete_pipeline.py  test_full_ingestion.py  test_ingestion.py  test_ingestor.py  test_kuzu_ingestion.py  test_oxigraph.py  test_real_ingestion.py  test_standalone_ingestion.py
magicscroll/: __init__.py  anthropic_kuzu_schema.py  api.py  claude_ingestor.py  cli.py  config.py  fipa_acl.py  ingestor.py  magic_scroll.py  magicscroll.py  ms_entity.py  ms_entry.py  ms_kuzu_store.py  ms_message.py  ms_milvus_store.py  ms_oxigraph_store.py  ms_search.py  ms_sqlite_store.py  ms_types.py  stores.py
magicscroll/db/: __init__.py  database_cli.py  database_manager.py  migration_manager.py
magicscroll/db/schemas/: __init__.py  kuzu_schema.py  milvus_schema.py  oxigraph_schema.py  sqlite_schema.py
magicscroll/digital_trinity/: README.md  __init__.py  fipa_acl.py  multi_model_chat.py
magicscroll/ingestor/: __init__.py  anthropic.py  base.py
